# school

./: .dockerignore  .gitignore  CLAUDE.md  COPYRIGHT  Dockerfile  IMAGE_GENERATION.md  LICENSE  README.md  api-contracts.md  architecture.md  build-plan.md  docker-compose.yml  feedback.md  future-features.md  index.html  list-models.mjs  old-README.md  package-lock.json  package.json  product-vision.md  school.py  tech-debt.md  test-api.mjs  v1.md  vite.config.ts
assets/: index-7LJhGwUm.css  index-B5842CgW.js  index-BLXo4jYB.js  index-CZza8o4z.js  index-Cly7cz0y.js  index-CpUEDGBC.css  index-CqjuVzrR.js  index-D3BW8m-V.css  index-DR5938xP.js  visualGenerator-B6dB6uSy.js  visualGenerator-BryzFTYP.js  visualGenerator-D5FbjvPY.js  visualGenerator-DpPqSD5t.js
backend/: .env.example  alembic.ini  entrypoint.sh  pyproject.toml
backend/src/app/: config.py  main.py
backend/src/app/agents/: activity_creator.py  activity_reviewer.py  assessment.py  lesson_planner.py  lesson_writer.py  logging.py
backend/src/app/auth/: dependencies.py
backend/src/app/db/: models.py  session.py
backend/src/app/db/migrations/: env.py
backend/src/app/db/migrations/versions/: 1c86f25998a1_initial_schema.py
backend/src/app/routers/: activities.py  assessments.py  catalog.py  courses.py  health.py  profile.py
backend/src/app/schemas/: activity.py  assessment.py  course.py  lesson.py  profile.py
backend/src/app/services/: catalog.py  generation.py  generation_tracker.py  progression.py
docs/: README.md  activities.md  ai-services.md  evolution-roadmap.md  frontend-views.md  (+3 more)
(+79 files in other folders)
